--- a/index.pug
+++ b/index.pug
@@ -22,7 +22,7 @@ html(lang="en")
           li.border.border--red
             .summary__list-item
               .list-item__category-name
-                img.category__image(src="../assets/images/icon-reaction.svg")
+                img.category__image(alt="reaction" src="../assets/images/icon-reaction.svg")
                 p.category__title Reaction
               .list-item__category-score
                 p.category__score 80
@@ -30,7 +30,7 @@ html(lang="en")
           li.border.border--yellow
             .summary__list-item
               .list-item__category-name
-                img.category__image(src="../assets/images/icon-memory.svg")
+                img.category__image(alt="memory" src="../assets/images/icon-memory.svg")
                 p.category__title Memory
               .list-item__category-score
                 p.category__score 92
@@ -38,7 +38,7 @@ html(lang="en")
           li.border.border--green
             .summary__list-item
               .list-item__category-name
-                img.category__image(src="../assets/images/icon-verbal.svg")
+                img.category__image(alt="verbal" src="../assets/images/icon-verbal.svg")
                 p.category__title Verbal
               .list-item__category-score
                 p.category__score 61
@@ -46,7 +46,7 @@ html(lang="en")
           li.border.border--blue
             .summary__list-item
               .list-item__category-name
-                img.category__image(src="../assets/images/icon-visual.svg")
+                img.category__image(alt="visual" src="../assets/images/icon-visual.svg")
                 p.category__title Visual
               .list-item__category-score
                 p.category__score 72
